# personal_finance_manager

./: Pipfile  README.md  email_receiving_flow.drawio  pyproject.toml  skaffold.yaml
infra/k8s/: users-depl.yaml  users-postgres-depl.yaml
services/users/: Dockerfile  Pipfile  requirements.txt
services/users/src/: database.py  dependencies.py  main.py
services/users/src/models/: user.py
services/users/src/routes/: __init__.py  all.py  signup.py
src/personal_finance_manager/: boto3_sample.py  example.csv  main.py  objects.py  send_raw_email.py
