[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_finance_manager"
version = "1.0.0"
authors = [
    {name = "Ngoc Chau", email = "playerzawesome@gmail.com"},
]
description = "This project helps me keep track of my expenses by extracting the content from the mails sent by issuing banks."
readme = "README.md"

[tool.ruff]
line-length = 119

[tool.isort]
line_length = 119
